tests/baselines/reference/renamingDestructuredPropertyInFunctionType3.errors.txt
renamingDestructuredPropertyInFunctionType3.ts(3,22): error TS2842: 'string' is an unused renaming of '[sym]'. Did you intend to use it as a type annotation?
renamingDestructuredPropertyInFunctionType3.ts(4,26): error TS2842: 'string' is an unused renaming of '[sym]'. Did you intend to use it as a type annotation?


==== renamingDestructuredPropertyInFunctionType3.ts (2 errors) ====
    const sym = Symbol();
    type O = Record<symbol, unknown>
    type F14 = ({ [sym]: string }: O) => void; // Error
                         ~~~~~~
!!! error TS2842: 'string' is an unused renaming of '[sym]'. Did you intend to use it as a type annotation?
    type G14 = new ({ [sym]: string }: O) => void; // Error
                             ~~~~~~
!!! error TS2842: 'string' is an unused renaming of '[sym]'. Did you intend to use it as a type annotation?
    
    const f13 =  ({ [sym]: string }: O) => { };
    function f14 ({ [sym]: string }: O) { };
    